# l0exp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
experiments/: __init__.py
experiments/microscopy/: exp.py  exp.yml
experiments/mixtures/: exp.py  exp.yml
experiments/regpath/: exp.py  exp.yml
experiments/regpath/datasets/: breast-cancer.pkl  colon-cancer.pkl  leukemia.pkl  riboflavin.pkl
experiments/synthetic/: exp.py
l0exp/: __init__.py
l0exp/datasets/: preprocess.py
l0exp/experiments/: dataset.py  instance.py  solver.py
l0exp/experiments/calibration/: exp.py  exp.yml
l0exp/experiments/microscopy/: exp.py  exp.yml
l0exp/experiments/mixtures/: exp.py  exp.yml
l0exp/experiments/realworld/: exp.py  exp.yml
l0exp/experiments/regpath/: exp.py  exp.yml
l0exp/experiments/synthetic/: exp.py  exp.yml
scripts/: main.py
