[project]
name = "l0exp"
description = "Numerical experiments for L0-norm problems"
readme = "README.md"
license = {file = "LICENSE", content-type = "text/markdown"}
authors = [{name = "Theo Guyard", email = "theo.guyard.job@gmail.com"}]
dependencies = [
    "cplex",
    "docplex",
    "el0ps",
    "exprun",
    "gurobipy",
    "l0bnb",
    "l0learn",
    "matplotlib",
    "Mosek",
    "numba",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "scikit-learn",
]
dynamic = ["version"]

[project.optional-dependencies]
mip = []
dev = ["black", "flake8"]

[tool.setuptools.dynamic]
version = {attr = "l0exp.__version__"}
